--- a/style.css
+++ b/style.css
@@ -16,6 +16,10 @@
   --font-xl: 18px;
   --font-2xl: 20px;
   --font-3xl: 22px;
+  --error: #dc3545;
+  --success: #28a745;
+  --warning: #ffc107;
+  --info: #007bff;
 }
 
 * {
@@ -279,4 +283,80 @@ input:focus, textarea:focus, select:focus {
 
 .todo-item:hover {
   background-color: var(--primary);
+}
+
+.toast {
+  color: white;
+  box-sizing: border-box;
+  padding: .75rem;
+  border: 1px solid;
+  border-radius: .25em;
+  position: relative;
+  cursor: pointer;
+  transform: translateX(0);
+  animation-duration: 0.25s;
+  animation-fill-mode: forwards;
+  opacity:0;
+}
+
+.toast::after {
+  content: "\00D7";
+  position: absolute;
+  right: 5px;
+  top: 3px;
+}
+
+.toast[data-type="error"] {
+  background-color: var(--error);
+}
+.toast[data-type="success"] {
+  background-color: var(--success);
+}
+.toast[data-type="warning"] {
+  background-color: var(--warning);
+}
+.toast[data-type="info"] {
+  background-color: var(--info);
+}
+
+.toast-container {
+  position: fixed;
+  margin:10px;
+  max-width: 400px;
+  min-width: 150px;
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+}
+
+.toast-container[data-position^="top-"] {
+  top: 0;
+}
+.toast-container[data-position^="bottom-"] {
+  bottom: 0;
+}
+.toast-container[data-position$="-right"] {
+  right: 0;
+  align-items: flex-end;
+}
+.toast-container[data-position$="-left"] {
+  right: 0;
+  align-items: flex-start;
+}
+.toast-container[data-position$="-center"] {
+  left:50%;
+}
+@keyframes slideInRight {
+  from { transform:translateX(110%); opacity:0}
+  to { transform:translateX(0); opacity:1}
+}
+@keyframes slideInLeft {
+  from { transform:translateX(-110%); opacity:0}
+  to { transform:translateX(0); opacity:1}
+}
+.toast-container[data-position$="-right"] .toast {
+  animation: slideInRight 0.25s forwards;
+}
+.toast-container[data-position$="-left"] .toast {
+  animation: slideInLeft 0.25s forwards;
 }
